# ai-homework

./: README.md  README_CN.md  README_EN.md  experiment_report.md  pyproject.toml
agent/base_agent/: base_agent.py
configs/: default_config.json  my_deepseek_config.json  my_deepseek_steps10_config.json
data/: daily_prices_AAPL.json  daily_prices_AMD.json  daily_prices_APP.json  daily_prices_AVGO.json  daily_prices_AZN.json  daily_prices_COST.json  daily_prices_GOOGL.json  daily_prices_META.json  daily_prices_MU.json  daily_prices_NFLX.json  daily_prices_NVDA.json  daily_prices_PEP.json
data/agent_data/deepseek-chat-v3.1/position/: performance_metrics.json  portfolio_values.csv
data/agent_data/my-deepseek-steps10/log/2025-10-01 11:00:00/: log.jsonl
data/agent_data/my-deepseek-steps10/log/2025-10-01 12:00:00/: log.jsonl
data/agent_data/my-deepseek-steps10/log/2025-10-01 13:00:00/: log.jsonl
data/agent_data/my-deepseek-steps10/log/2025-10-01 14:00:00/: log.jsonl
data/agent_data/my-deepseek-steps10/log/2025-10-01 15:00:00/: log.jsonl
data/agent_data/my-deepseek-steps10/log/2025-10-02 10:00:00/: log.jsonl
data/agent_data/my-deepseek-steps10/position/: performance_metrics.json  portfolio_values.csv  position.jsonl
data/agent_data/my-deepseek/log/2025-10-01 11:00:00/: log.jsonl
data/agent_data/my-deepseek/log/2025-10-01 12:00:00/: log.jsonl
data/agent_data/my-deepseek/log/2025-10-01 13:00:00/: log.jsonl
data/agent_data/my-deepseek/position/: performance_metrics.json  portfolio_values.csv  position.jsonl
docs/: config.yaml
(+8 files in other folders)
